Fixed sound bar on small screen and updated RadMe file

--- a/Styles/Style.CSS
+++ b/Styles/Style.CSS
@@ -119,3 +119,7 @@ body {
 #forms {
     font-weight: 900; 
 }   
+
+#merlin {
+    width: 100%
+}
